// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmartContractAccountToggleSection Disabled State Handling disables all toggles when requests are pending 1`] = `
<div>
  <div
    class="mm-box mm-box--padding-top-3 mm-box--padding-right-4 mm-box--padding-bottom-3 mm-box--padding-left-4 mm-box--width-full mm-box--background-color-background-alternative"
    style="border-radius: 8px;"
  >
    <div
      class="mm-box"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--margin-bottom-2 mm-box--color-text-default"
      >
        Enable smart contract account
      </p>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
      >
        You can enable smart account features on supported networks.
         
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-sm mm-button-link mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          rel="noopener noreferrer"
          style="font-size: 14px; line-height: 20px; vertical-align: baseline;"
          target="_blank"
        >
          Learn more
        </button>
      </p>
    </div>
    <div
      class="mm-box"
    >
      <div
        class="mm-box"
      >
        <div
          class="mm-box mm-box--margin-top-2 mm-box--display-flex mm-box--justify-content-space-between"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
          >
            Ethereum Mainnet
          </p>
          <label
            class="toggle-button toggle-button--on toggle-button--disabled"
            tabindex="0"
          >
            <div
              style="display: flex; width: 52px; align-items: center; justify-content: flex-start; position: relative; cursor: pointer; background-color: transparent; border: 0px; padding: 0px; user-select: none;"
            >
              <div
                style="width: 40px; height: 24px; padding: 0px; border-radius: 26px; display: flex; align-items: center; justify-content: center; background-color: rgb(139, 153, 255);"
              >
                <div
                  style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgb(250, 250, 250); margin-top: auto; margin-bottom: auto; line-height: 0; opacity: 1; width: 26px; height: 20px; left: 4px;"
                />
                <div
                  style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgba(255, 255, 255, 0.6); bottom: 0px; margin-top: auto; margin-bottom: auto; padding-right: 5px; line-height: 0; width: 26px; height: 20px; opacity: 0;"
                />
              </div>
              <div
                style="position: absolute; height: 100%; top: 0px; left: 0px; display: flex; flex: 1; align-self: stretch; align-items: center; justify-content: flex-start;"
              >
                <div
                  style="width: 18px; height: 18px; display: flex; align-self: center; box-shadow: var(--shadow-size-xs) var(--color-shadow-default); border-radius: 50%; box-sizing: border-box; position: relative; background-color: rgb(255, 255, 255); left: 18px;"
                />
              </div>
              <input
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                type="checkbox"
                value="true"
              />
            </div>
            <div
              class="toggle-button__status"
            >
              <span
                class="toggle-button__label-off"
              />
              <span
                class="toggle-button__label-on"
              />
            </div>
          </label>
        </div>
        <div
          class="mm-box mm-box--margin-top-2 mm-box--display-flex mm-box--justify-content-space-between"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
          >
            Sepolia
          </p>
          <label
            class="toggle-button toggle-button--off toggle-button--disabled"
            tabindex="0"
          >
            <div
              style="display: flex; width: 52px; align-items: center; justify-content: flex-start; position: relative; cursor: pointer; background-color: transparent; border: 0px; padding: 0px; user-select: none;"
            >
              <div
                style="width: 40px; height: 24px; padding: 0px; border-radius: 26px; display: flex; align-items: center; justify-content: center; background-color: rgb(75, 80, 92);"
              >
                <div
                  style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgb(250, 250, 250); margin-top: auto; margin-bottom: auto; line-height: 0; opacity: 0; width: 26px; height: 20px; left: 4px;"
                />
                <div
                  style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgba(255, 255, 255, 0.6); bottom: 0px; margin-top: auto; margin-bottom: auto; padding-right: 5px; line-height: 0; width: 26px; height: 20px; opacity: 1;"
                />
              </div>
              <div
                style="position: absolute; height: 100%; top: 0px; left: 0px; display: flex; flex: 1; align-self: stretch; align-items: center; justify-content: flex-start;"
              >
                <div
                  style="width: 18px; height: 18px; display: flex; align-self: center; box-shadow: var(--shadow-size-xs) var(--color-shadow-default); border-radius: 50%; box-sizing: border-box; position: relative; background-color: rgb(255, 255, 255); left: 3px;"
                />
              </div>
              <input
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                type="checkbox"
                value="false"
              />
            </div>
            <div
              class="toggle-button__status"
            >
              <span
                class="toggle-button__label-off"
              />
              <span
                class="toggle-button__label-on"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SmartContractAccountToggleSection Learn More Button opens Zendesk article when clicked 1`] = `
<div>
  <div
    class="mm-box mm-box--padding-top-3 mm-box--padding-right-4 mm-box--padding-bottom-3 mm-box--padding-left-4 mm-box--width-full mm-box--background-color-background-alternative"
    style="border-radius: 8px;"
  >
    <div
      class="mm-box"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--margin-bottom-2 mm-box--color-text-default"
      >
        Enable smart contract account
      </p>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
      >
        You can enable smart account features on supported networks.
         
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-sm mm-button-link mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          rel="noopener noreferrer"
          style="font-size: 14px; line-height: 20px; vertical-align: baseline;"
          target="_blank"
        >
          Learn more
        </button>
      </p>
    </div>
    <div
      class="mm-box"
    >
      <div
        class="mm-box"
      />
    </div>
  </div>
</div>
`;

exports[`SmartContractAccountToggleSection Loading State shows loading spinner while fetching networks 1`] = `
<div>
  <div
    class="mm-box mm-box--padding-top-3 mm-box--padding-right-4 mm-box--padding-bottom-3 mm-box--padding-left-4 mm-box--width-full mm-box--background-color-background-alternative"
    style="border-radius: 8px;"
  >
    <div
      class="mm-box"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--margin-bottom-2 mm-box--color-text-default"
      >
        Enable smart contract account
      </p>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
      >
        You can enable smart account features on supported networks.
         
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-sm mm-button-link mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          rel="noopener noreferrer"
          style="font-size: 14px; line-height: 20px; vertical-align: baseline;"
          target="_blank"
        >
          Learn more
        </button>
      </p>
    </div>
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--padding-top-12 mm-box--padding-bottom-12 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center"
        data-testid="network-loader"
      >
        <svg
          class="preloader__icon"
          fill="none"
          height="24"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M8 13.7143C4.84409 13.7143 2.28571 11.1559 2.28571 8C2.28571 4.84409 4.84409 2.28571 8 2.28571C11.1559 2.28571 13.7143 4.84409 13.7143 8C13.7143 11.1559 11.1559 13.7143 8 13.7143ZM8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16Z"
            fill="var(--color-primary-muted)"
            fill-rule="evenodd"
          />
          <mask
            height="16"
            id="mask0"
            mask-type="alpha"
            maskUnits="userSpaceOnUse"
            width="16"
            x="0"
            y="0"
          >
            <path
              clip-rule="evenodd"
              d="M8 13.7143C4.84409 13.7143 2.28571 11.1559 2.28571 8C2.28571 4.84409 4.84409 2.28571 8 2.28571C11.1559 2.28571 13.7143 4.84409 13.7143 8C13.7143 11.1559 11.1559 13.7143 8 13.7143ZM8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16Z"
              fill="var(--color-primary-default)"
              fill-rule="evenodd"
            />
          </mask>
          <g
            mask="url(#mask0)"
          >
            <path
              d="M6.85718 17.9999V11.4285V8.28564H-4.85711V17.9999H6.85718Z"
              fill="var(--color-primary-default)"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`SmartContractAccountToggleSection Network Integration displays toggle for each available network 1`] = `
<div>
  <div
    class="mm-box mm-box--padding-top-3 mm-box--padding-right-4 mm-box--padding-bottom-3 mm-box--padding-left-4 mm-box--width-full mm-box--background-color-background-alternative"
    style="border-radius: 8px;"
  >
    <div
      class="mm-box"
    >
      <p
        class="mm-box mm-text mm-text--body-md-medium mm-box--margin-bottom-2 mm-box--color-text-default"
      >
        Enable smart contract account
      </p>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
      >
        You can enable smart account features on supported networks.
         
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-sm mm-button-link mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          rel="noopener noreferrer"
          style="font-size: 14px; line-height: 20px; vertical-align: baseline;"
          target="_blank"
        >
          Learn more
        </button>
      </p>
    </div>
    <div
      class="mm-box"
    >
      <div
        class="mm-box"
      >
        <div
          class="mm-box mm-box--margin-top-2 mm-box--display-flex mm-box--justify-content-space-between"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
          >
            Ethereum Mainnet
          </p>
          <label
            class="toggle-button toggle-button--on"
            tabindex="0"
          >
            <div
              style="display: flex; width: 52px; align-items: center; justify-content: flex-start; position: relative; cursor: pointer; background-color: transparent; border: 0px; padding: 0px; user-select: none;"
            >
              <div
                style="width: 40px; height: 24px; padding: 0px; border-radius: 26px; display: flex; align-items: center; justify-content: center; background-color: rgb(139, 153, 255);"
              >
                <div
                  style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgb(250, 250, 250); margin-top: auto; margin-bottom: auto; line-height: 0; opacity: 1; width: 26px; height: 20px; left: 4px;"
                />
                <div
                  style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgba(255, 255, 255, 0.6); bottom: 0px; margin-top: auto; margin-bottom: auto; padding-right: 5px; line-height: 0; width: 26px; height: 20px; opacity: 0;"
                />
              </div>
              <div
                style="position: absolute; height: 100%; top: 0px; left: 0px; display: flex; flex: 1; align-self: stretch; align-items: center; justify-content: flex-start;"
              >
                <div
                  style="width: 18px; height: 18px; display: flex; align-self: center; box-shadow: var(--shadow-size-xs) var(--color-shadow-default); border-radius: 50%; box-sizing: border-box; position: relative; background-color: rgb(255, 255, 255); left: 18px;"
                />
              </div>
              <input
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                type="checkbox"
                value="true"
              />
            </div>
            <div
              class="toggle-button__status"
            >
              <span
                class="toggle-button__label-off"
              />
              <span
                class="toggle-button__label-on"
              />
            </div>
          </label>
        </div>
        <div
          class="mm-box mm-box--margin-top-2 mm-box--display-flex mm-box--justify-content-space-between"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-alternative"
          >
            Sepolia
          </p>
          <label
            class="toggle-button toggle-button--off"
            tabindex="0"
          >
            <div
              style="display: flex; width: 52px; align-items: center; justify-content: flex-start; position: relative; cursor: pointer; background-color: transparent; border: 0px; padding: 0px; user-select: none;"
            >
              <div
                style="width: 40px; height: 24px; padding: 0px; border-radius: 26px; display: flex; align-items: center; justify-content: center; background-color: rgb(75, 80, 92);"
              >
                <div
                  style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgb(250, 250, 250); margin-top: auto; margin-bottom: auto; line-height: 0; opacity: 0; width: 26px; height: 20px; left: 4px;"
                />
                <div
                  style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgba(255, 255, 255, 0.6); bottom: 0px; margin-top: auto; margin-bottom: auto; padding-right: 5px; line-height: 0; width: 26px; height: 20px; opacity: 1;"
                />
              </div>
              <div
                style="position: absolute; height: 100%; top: 0px; left: 0px; display: flex; flex: 1; align-self: stretch; align-items: center; justify-content: flex-start;"
              >
                <div
                  style="width: 18px; height: 18px; display: flex; align-self: center; box-shadow: var(--shadow-size-xs) var(--color-shadow-default); border-radius: 50%; box-sizing: border-box; position: relative; background-color: rgb(255, 255, 255); left: 3px;"
                />
              </div>
              <input
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                type="checkbox"
                value="false"
              />
            </div>
            <div
              class="toggle-button__status"
            >
              <span
                class="toggle-button__label-off"
              />
              <span
                class="toggle-button__label-on"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
